# smarkets2024

./: .gitignore
code/: Cargo.toml  mutex.py  mutex_oops.py  racey.py
code/async/async_hello/: Cargo.toml
code/async/async_hello/src/: main.rs
code/async/async_join/: Cargo.toml
code/async/async_join/src/: main.rs
code/async/async_join_blocking/: Cargo.toml
code/async/async_join_blocking/src/: main.rs
code/async/async_join_yield/: Cargo.toml
code/async/async_join_yield/src/: main.rs
code/async/async_tcp/: Cargo.toml
code/async/async_tcp/src/: main.rs
code/benchmark/flame_me/: Cargo.toml
code/benchmark/tracing_example/: Cargo.toml
code/benchmark/tracing_example/src/: main.rs
code/memory/arena_demo/: Cargo.toml
code/memory/arena_demo/src/: main.rs
code/memory/slots/: Cargo.toml
code/memory/slots/src/: main.rs
code/python/: fib.py
code/python/rclass/: Cargo.toml  classy.py
code/python/rclass/src/: lib.rs
code/python/rfib/: Cargo.toml  fib.py  librfib.d  run.sh
code/python/rfib/src/: lib.rs
code/python/rust_call_python/: Cargo.toml  python_program.py
code/python/rust_call_python/src/: main.rs
code/safety/rust_racey/: Cargo.toml
code/safety/rust_racey/src/: main.rs
code/threads/fib_rayon/: Cargo.toml
code/threads/fib_rayon/src/: main.rs
code/threads/fib_sync/: Cargo.toml
code/threads/fib_sync/src/: main.rs
code/threads/rayon_join/: Cargo.toml
code/threads/rayon_spawn/: Cargo.toml
code/threads/regular_threads/: Cargo.toml
code/threads/regular_threads_return/: Cargo.toml
code/threads/sort_rayon/: Cargo.toml
(+101 files in other folders)
